# Evento_BE

./: .gitignore  pyproject.toml  test.sh
.github/workflows/: ci.yml
comment_like/: apps.py
config/: settings.py
favorite_event/: apps.py
